@@ -86,11 +86,11 @@ class ExposeInternals(Transform):
     """
 
     default_priority = 840
-    
+
     def not_Text(self, node):
         return not isinstance(node, nodes.Text)
 
-    def apply(self): 
+    def apply(self):
         if self.document.settings.expose_internals:
             for node in self.document.traverse(self.not_Text):
                 for att in self.document.settings.expose_internals:
@@ -167,3 +167,37 @@ class StripComments(Transform):
         if self.document.settings.strip_comments:
             for node in self.document.traverse(nodes.comment):
                 node.parent.remove(node)
+
+
+class StripClassesAndElements(Transform):
+
+    """
+    Remove from the document tree all elements with classes in
+    `self.document.settings.strip_elements_with_classes` and all "classes"
+    attribute values in `self.document.settings.strip_classes`.
+    """
+
+    default_priority = 750
+
+    def apply(self):
+        if not (self.document.settings.strip_elements_with_classes
+                or self.document.settings.strip_classes):
+            return
+        # prepare dicts for lookup (not sets, for Python 2.2 compatibility):
+        self.strip_elements = dict(
+            [(key, None)
+             for key in (self.document.settings.strip_elements_with_classes
+                         or [])])
+        self.strip_classes = dict(
+            [(key, None) for key in (self.document.settings.strip_classes
+                                     or [])])
+        for node in self.document.traverse(self.check_classes):
+            node.parent.remove(node)
+
+    def check_classes(self, node):
+        if isinstance(node, nodes.Element):
+            for class_value in node['classes'][:]:
+                if class_value in self.strip_classes:
+                    node['classes'].remove(class_value)
+                if class_value in self.strip_elements:
+                    return 1
