@@ -30,6 +30,9 @@ Changes Since 0.4
   - Paths of applied configuration files are now recorded in the
     runtime setting ``_config_files`` (accessible via
     ``--dump-settings``).
+  - Added ``--strip-elements-with-class`` and ``--strip-class``
+    options (``strip_elements_with_classes`` and ``strip_classes``
+    settings).
 
 * docutils/io.py:
 
@@ -68,7 +71,12 @@ Changes Since 0.4
     object-oriented directive interface.  Errors are now (mostly)
     thrown using the new ``DirectiveError`` class.
 
-* docutils/transforms/writer_aux/:
+* docutils/transforms/universal.py:
+
+  - Added ``StripClasses`` transform to remove from the document tree
+    all elements with classes in ``settings.strip_classes``.
+
+* docutils/transforms/writer_aux.py:
 
   - Added ``Admonitions`` transform to transform specific admonitions
     (like ``note``, ``warning``, etc.) into generic admonitions with a
